Issue with container for flags being too small fixed.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -852,7 +852,7 @@ nav ul li {
         top: 10px;
 
         &:after {
-            left: 234px;
+            left: 231px;
         }
     }
     #user-container {
